Empties no longer support Rigid Body Constraints #69582

Closed
opened 2019-09-06 12:48:54 +02:00 by Ben · 8 comments

image.png

The current experimental builds (2.81.8) do not allow the creation of Rigid Body Constraints on Empties anymore.

Is that a purposeful move or an oversight? I use this for creating collider chains in conjunction with bones. It was still working in 2.81.2, so I am wondering why it is not anymore.

Blender Version
Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 02:56, hash: 6fc6f2504d
Worked in:
version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: bbb3500c97

![image.png](https://archive.blender.org/developer/F7727934/image.png) The current experimental builds (2.81.8) do not allow the creation of Rigid Body Constraints on Empties anymore. Is that a purposeful move or an oversight? I use this for creating collider chains in conjunction with bones. It was still working in 2.81.2, so I am wondering why it is not anymore. **Blender Version** Broken: version: 2.81 (sub 8), branch: master, commit date: 2019-09-05 02:56, hash: `6fc6f2504d` Worked in: version: 2.80 (sub 74), branch: master, commit date: 2019-06-30 19:51, hash: `bbb3500c97`
Author

Added subscriber: @TheOldBen

Added subscriber: @TheOldBen

#69583 was marked as duplicate of this issue

#69583 was marked as duplicate of this issue
Author

image.png

![image.png](https://archive.blender.org/developer/F7727931/image.png)
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Can confirm, checking...
probably caused by 1342d1879e

Like mentioned in #69583, therefor the "connect" operator between ridgid bodies is also broken....

Can confirm, checking... probably caused by 1342d1879e Like mentioned in #69583, therefor the "connect" operator between ridgid bodies is also broken....
Member

Added subscribers: @dskjal-1, @elubie

Added subscribers: @dskjal-1, @elubie

This issue was referenced by 2cec4af124

This issue was referenced by 2cec4af124d42fcdb1f48e4dfc8a56f0ade000e9
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Philipp Oeser self-assigned this 2019-09-12 11:26:00 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69582
No description provided.